--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -1,15 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\StoreManagement.DAL\StoreManagement.DAL.csproj">
-      <Private>True</Private>
-    </ProjectReference>
+    <ProjectReference Include="..\StoreManagement.BLL\StoreManagement.BLL.csproj" />
   </ItemGroup>
 
 </Project>
