--- a/StoreManager/appsettings.json
+++ b/StoreManager/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DBDefault": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=Lucy_SalesData;User Id=adm;Password=123;TrustServerCertificate=True"
+    "DBDefault": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=Lucy_SalesData;User Id=sa;Password=1234567890;TrustServerCertificate=True"
   }
 }
